--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <main class="max-w-xl mx-auto p-4 space-y-4">
     
   <section class="bg-gradient-to-br from-yellow-400 to-yellow-100 rounded-xl shadow-md p-6 text-center">
-     <h2 class="text-2xl font-extrabold text-blue-900 mb-2 drop-shadow">قیمت هر گرم طلای ۱۸ عیار</h2>
+     <h2 class="text-xl font-extrabold text-blue-900 mb-2 drop-shadow">قیمت هر گرم طلای ۱۸ عیار</h2>
      <p id="gold-price" class="text-2xl font-extrabold persian-numbers text-gray-800 drop-shadow">در حال بارگذاری...</p>
      <small id="gold-change" class="block mt-1 text-base text-gray-600 persian-numbers drop-shadow">...</small>
   </section>
@@ -48,7 +48,7 @@
 
   <section class="bg-gradient-to-br from-green-400 to-green-100 rounded-xl shadow-md p-6 text-center">
     <h3 class="text-xl font-extrabold text-gray-800 mb-2 drop-shadow">دارایی کل</h3>
-    <p id="gold-amount" class="text-2xl font-extrabold persian-numbers text-gray-800 drop-shadow">...</p>
+    <p id="gold-amount" class="text-xl font-extrabold persian-numbers text-gray-800 drop-shadow">...</p>
   </section>
 
   
