--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <main class="max-w-xl mx-auto p-4 space-y-4">
     
-  <section class="bg-gradient-to-br from-yellow-400 to-yellow-100 rounded-xl shadow-md p-6 text-center">
+     <section id="gold-box" class="bg-gradient-to-br from-yellow-400 to-yellow-100 rounded-xl shadow-md p-6 text-center">
      <h2 class="text-xl font-extrabold text-blue-900 mb-2 drop-shadow">قیمت هر گرم طلای ۱۸ عیار</h2>
      <p id="gold-price" class="text-xl font-extrabold persian-numbers text-gray-800 drop-shadow">در حال بارگذاری...</p>
      <small id="gold-change" class="block mt-1 text-base text-gray-600 persian-numbers drop-shadow">...</small>
@@ -46,7 +46,7 @@
     در حال محاسبه سود/زیان...
   </section>
 
-  <section class="bg-gradient-to-br from-green-400 to-green-100 rounded-xl shadow-md p-6 text-center">
+  <section class="bg-gradient-to-br from-yellow-400 to-yellow-100 rounded-xl shadow-md p-6 text-center">
     <h3 class="text-xl font-extrabold text-gray-800 mb-2 drop-shadow">دارایی کل</h3>
     <p id="gold-amount" class="text-xl font-extrabold persian-numbers text-gray-800 drop-shadow">...</p>
   </section>
@@ -84,11 +84,19 @@
           animateElement("gold-price", toPersianNumber(gold18.price.toLocaleString()) + " تومان");
           let value = gold18.change_value;
           let percent = gold18.change_percent;
-          let valueStr = (value < 0 ? "-" : "") + Math.abs(value).toLocaleString();
-          let percentStr = (percent < 0 ? "-" : "") + Math.abs(percent);
+          let valueStr = Math.abs(value).toLocaleString();  // حذف علامت منفی
+          let percentStr = Math.abs(percent).toFixed(2);     // حذف علامت منفی و محدود به دو رقم اعشار
           let valueText = toPersianNumber(valueStr);
           let percentText = toPersianNumber(percentStr);
           animateElement("gold-change", valueText + " (%" + percentText + ")");
+
+           // تغییر رنگ باکس بر اساس مثبت یا منفی بودن درصد
+          const goldBox = document.getElementById("gold-box");
+          if (percent >= 0) {
+             goldBox.className = "bg-gradient-to-br from-green-400 to-green-100 rounded-xl shadow-md p-6 text-center";
+          } else {
+             goldBox.className = "bg-gradient-to-br from-red-400 to-red-100 rounded-xl shadow-md p-6 text-center";
+          }
           
           const goldPrice = gold18.price;
           const myGoldGrams = 438.44;
