--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </section>
 
   <section class="bg-gradient-to-br from-purple-700 to-purple-100 rounded-xl shadow-md p-6 text-center">
-    <h3 id="portfolio-title" class="text-xl font-extrabold text-gray-800 mb-2 drop-shadow">ارزش طلای آبشده</h3>
+    <h3 id="portfolio-title" class="text-xl font-extrabold text-white mb-2 drop-shadow">ارزش طلای آبشده</h3>
     <p id="portfolio-value" class="text-xl font-extrabold persian-numbers text-gray-800 drop-shadow">...</p>
   </section>
 
@@ -46,7 +46,7 @@
     در حال محاسبه سود/زیان...
   </section>
 
-  <section class="bg-gradient-to-br from-yellow-700 to-yellow-100 rounded-xl shadow-md p-6 text-center">
+  <section class="bg-gradient-to-br from-yellow-600 to-yellow-100 rounded-xl shadow-md p-6 text-center">
     <h3 class="text-xl font-extrabold text-gray-800 mb-2 drop-shadow">دارایی کل</h3>
     <p id="gold-amount" class="text-xl font-extrabold persian-numbers text-gray-800 drop-shadow">...</p>
   </section>
@@ -93,9 +93,9 @@
            // تغییر رنگ باکس بر اساس مثبت یا منفی بودن درصد
           const goldBox = document.getElementById("gold-box");
           if (percent >= 0) {
-             goldBox.className = "bg-gradient-to-br from-green-400 to-green-100 rounded-xl shadow-md p-6 text-center";
+             goldBox.className = "bg-gradient-to-br from-green-700 to-green-100 rounded-xl shadow-md p-6 text-center";
           } else {
-             goldBox.className = "bg-gradient-to-br from-red-400 to-red-100 rounded-xl shadow-md p-6 text-center";
+             goldBox.className = "bg-gradient-to-br from-red-700 to-red-100 rounded-xl shadow-md p-6 text-center";
           }
           
           const goldPrice = gold18.price;
