--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
     
      <section id="gold-box" class="bg-gradient-to-br from-yellow-700 to-yellow-300 rounded-xl shadow-md p-6 text-center">
      <h2 class="text-xl font-extrabold text-white mb-2 drop-shadow">قیمت هر گرم طلای ۱۸ عیار</h2>
-     <p id="gold-price" class="text-xl font-extrabold persian-numbers text-gray-800 drop-shadow">در حال بارگذاری...</p>
+     <p id="gold-price" class="text-2xl font-extrabold persian-numbers text-black drop-shadow">در حال بارگذاری...</p>
      <small id="gold-change" class="block mt-1 text-base text-black persian-numbers drop-shadow">...</small>
   </section>
 
   <section class="bg-gradient-to-br from-purple-700 to-purple-300 rounded-xl shadow-md p-6 text-center">
     <h3 id="portfolio-title" class="text-xl font-extrabold text-white mb-2 drop-shadow">ارزش طلای آبشده</h3>
-    <p id="portfolio-value" class="text-xl font-extrabold persian-numbers text-black drop-shadow">...</p>
+    <p id="portfolio-value" class="text-2xl font-extrabold persian-numbers text-black drop-shadow">...</p>
   </section>
 
   <section id="profit-box" class="rounded-xl p-6 text-center text-white persian-numbers">
@@ -48,7 +48,7 @@
 
   <section class="bg-gradient-to-br from-yellow-700 to-yellow-300 rounded-xl shadow-md p-6 text-center">
     <h3 class="text-xl font-extrabold text-white mb-2 drop-shadow">دارایی کل</h3>
-    <p id="gold-amount" class="text-xl font-extrabold persian-numbers text-black drop-shadow">...</p>
+    <p id="gold-amount" class="text-2xl font-extrabold persian-numbers text-black drop-shadow">...</p>
   </section>
 
   
@@ -129,7 +129,7 @@
                         <div class="text-xl font-extrabold drop-shadow text-white">
                            ارزش صندوق عیار (${toPersianNumber(total.toLocaleString())} واحد)
                         </div>
-                        <div class="text-xl font-extrabold drop-shadow mt-2">
+                        <div class="text-2xl font-extrabold drop-shadow mt-2">
                             ${toPersianNumber(Math.floor(result).toLocaleString())} تومان
                         </div>
                    `);
