--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 
   <main class="max-w-xl mx-auto p-4 space-y-4">
     
-     <section id="gold-box" class="bg-gradient-to-br from-yellow-700 to-yellow-300 rounded-xl shadow-md p-6 text-center">
-     <h2 class="text-xl font-extrabold text-yellow mb-2 drop-shadow">قیمت هر گرم طلای ۱۸ عیار</h2>
+     <section id="gold-box" class="bg-gradient-to-br from-yellow-700 to-yellow-400 rounded-xl shadow-md p-6 text-center">
+     <h2 class="text-xl font-extrabold text-yellow-400 mb-2 drop-shadow">قیمت هر گرم طلای ۱۸ عیار</h2>
      <p id="gold-price" class="text-2xl font-extrabold persian-numbers text-white drop-shadow">در حال بارگذاری...</p>
      <small id="gold-change" class="block mt-1 text-base text-white persian-numbers drop-shadow">...</small>
   </section>
 
-  <section class="bg-gradient-to-br from-purple-700 to-purple-300 rounded-xl shadow-md p-6 text-center">
+  <section class="bg-gradient-to-br from-purple-700 to-purple-400 rounded-xl shadow-md p-6 text-center">
     <h3 id="portfolio-title" class="text-xl font-extrabold text-yellow-400 mb-2 drop-shadow">ارزش طلای آبشده</h3>
     <p id="portfolio-value" class="text-2xl font-extrabold persian-numbers text-white drop-shadow">...</p>
   </section>
@@ -48,7 +48,7 @@
 
   <section class="bg-white rounded-xl shadow-md p-6 text-center">
     <h3 class="text-xl font-extrabold text-black mb-2 drop-shadow">دارایی کل</h3>
-    <p id="gold-amount" class="text-2xl font-extrabold persian-numbers text-white drop-shadow">...</p>
+    <p id="gold-amount" class="text-2xl font-extrabold persian-numbers text-black drop-shadow">...</p>
   </section>
 
   
@@ -93,9 +93,9 @@
            // تغییر رنگ باکس بر اساس مثبت یا منفی بودن درصد
           const goldBox = document.getElementById("gold-box");
           if (percent >= 0) {
-             goldBox.className = "bg-gradient-to-br from-green-700 to-green-300 rounded-xl shadow-md p-6 text-center";
+             goldBox.className = "bg-gradient-to-br from-green-700 to-green-400 rounded-xl shadow-md p-6 text-center";
           } else {
-             goldBox.className = "bg-gradient-to-br from-red-700 to-red-300 rounded-xl shadow-md p-6 text-center";
+             goldBox.className = "bg-gradient-to-br from-red-700 to-red-400 rounded-xl shadow-md p-6 text-center";
           }
           
           const goldPrice = gold18.price;
@@ -129,7 +129,7 @@
                         <div class="text-xl font-extrabold drop-shadow text-yellow-400">
                            ارزش صندوق عیار (${toPersianNumber(total.toLocaleString())} واحد)
                         </div>
-                        <div class="text-2xl font-extrabold drop-shadow mt-2">
+                        <div class="text-2xl font-extrabold drop-shadow text-white mt-2">
                             ${toPersianNumber(Math.floor(result).toLocaleString())}
                         </div>
                    `);
