--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn-font@v33.003/font-face.css" rel="stylesheet" />
   <style>
-    body {
-      font-family: 'Vazirmatn', sans-serif;
+    * {
+      font-family: 'Vazirmatn', sans-serif !important;
     }
     .persian-numbers {
       font-feature-settings: "ss01";
@@ -50,8 +50,6 @@
     <h3 class="text-xl font-extrabold text-blue-700 mb-2 drop-shadow">دارایی کل</h3>
     <p id="gold-amount" class="text-2xl font-extrabold persian-numbers text-black drop-shadow">...</p>
   </section>
-
-  
 
   <!-- نمایش زمان به‌روزرسانی -->
   <p id="last-update" class="text-sm text-gray-500 text-center mt-4 persian-numbers">در حال دریافت زمان...</p>
